Updated text for testing

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       rel="stylesheet"
       type="text/css"
-    />
+      />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Pangolin&family=Lato&display=swap"
       rel="stylesheet"
-    />
+      />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <header>
-      <div class="logo">Thinkfulbnb</div>
+      <div class="logo">Hello</div>
       <nav>
         <ul id="menu">
           <li><a>Stay</a></li>
@@ -44,12 +44,12 @@
         <img
           src="images/vacation-rental-pool.png"
           alt="Thinkfulbnb - Vacation rental pool"
-        />
+          />
 
         <img
           src="images/vacation-rental-inside-stone.png"
           alt="Thinkfulbnb - Vacation rental inside stone"
-        />
+          />
 
         <p>
           Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
@@ -67,10 +67,9 @@
         <img
           src="images/forest-retreat.png"
           alt="Thinkfulbnb - Forest retreat"
-        />
+          />
         <h3>Beaches</h3>
         <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
-
         <h3>Rustic cabins</h3>
         <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
 
